# Amethyst

./: .gitignore  CMakeLists.txt  README.md
src/: address.cpp  address.hpp  amethyst.hpp  amethyst.inl  networking.hpp  socket.cpp  socket.hpp
src/test/: cpl_test.bat  demo_http.cpp  demo_tcp.cpp  demo_udp.cpp  test.cpp
src/utility/: platform.hpp
